Tue Feb  9 10:15:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_RTComponentServer_Task.cpp:
          Fixed memory leak

        * connectors/ami4ccm/docs/AMI4CCM-explanation.odt:
        * connectors/ami4ccm/docs/AMI4CCM-spec.odt:
          Small updates

Tue Feb  9 10:03:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Reader/Base/Reader_Starter.idl:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Reader/Sender/Reader_Test_Sender_exec.cpp:
          Since on_data_on_readers is not available anymore, this test
          didn't start. Resolved this by letting the receiver know that
          all samples were written.

Tue Feb  9 09:29:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.cpp:
          Resolved compiler issue.

Tue Feb  9 08:40:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          When DDS returns nil as a listener, we don't need
          to create a proxy. Just return nil will be enough.
          Implemented get_listener methods.

Mon Feb  8 20:22:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/TestCoverage.ods:
          Updated.

        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender_exec.cpp:
          Optimized logging.
